--- a/users/static/users/css/profile.css
+++ b/users/static/users/css/profile.css
@@ -1,95 +1,46 @@
 body{
-    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+
+    background-color:#B3E5FC;
+    border-radius: 10px;
+
 }
-.emp-profile{
-    padding: 3%;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    border-radius: 0.5rem;
-    background: #fff;
+
+
+.card{
+  width: 400px;
+  border: none;
+  border-radius: 10px;
+
+  background-color: #fff;
 }
-.profile-img{
-    text-align: center;
+
+
+
+.stats{
+
+      background: #f2f5f8 !important;
+
+    color: #000 !important;
 }
-.profile-img img{
-    width: 70%;
-    height: 100%;
+.articles{
+  font-size:10px;
+  color: #a1aab9;
 }
-.profile-img .file {
-    position: relative;
-    overflow: hidden;
-    margin-top: -20%;
-    width: 70%;
-    border: none;
-    border-radius: 0;
-    font-size: 15px;
-    background: #212529b8;
+.number1{
+  font-weight:500;
 }
-.profile-img .file input {
-    position: absolute;
-    opacity: 0;
-    right: 0;
-    top: 0;
+.followers{
+    font-size:10px;
+  color: #a1aab9;
+
 }
-.profile-head h5{
-    color: #333;
+.number2{
+  font-weight:500;
 }
-.profile-head h6{
-    color: #0062cc;
+.rating{
+    font-size:10px;
+  color: #a1aab9;
 }
-.profile-edit-btn{
-    border: none;
-    border-radius: 1.5rem;
-    width: 70%;
-    padding: 2%;
-    font-weight: 600;
-    color: #6c757d;
-    cursor: pointer;
-}
-.proile-rating{
-    font-size: 12px;
-    color: #818182;
-    margin-top: 5%;
-}
-.proile-rating span{
-    color: #495057;
-    font-size: 15px;
-    font-weight: 600;
-}
-.profile-head .nav-tabs{
-    margin-bottom:5%;
-}
-.profile-head .nav-tabs .nav-link{
-    font-weight:600;
-    border: none;
-}
-.profile-head .nav-tabs .nav-link.active{
-    border: none;
-    border-bottom:2px solid #0062cc;
-}
-.profile-work{
-    padding: 14%;
-    margin-top: -15%;
-}
-.profile-work p{
-    font-size: 12px;
-    color: #818182;
-    font-weight: 600;
-    margin-top: 10%;
-}
-.profile-work a{
-    text-decoration: none;
-    color: #495057;
-    font-weight: 600;
-    font-size: 14px;
-}
-.profile-work ul{
-    list-style: none;
-}
-.profile-tab label{
-    font-weight: 600;
-}
-.profile-tab p{
-    font-weight: 600;
-    color: #0062cc;
+.number3{
+  font-weight:500;
 }
