--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
+<div class="mt-4 mb-4">
+    {% include 'header.html' %}
+</div>
+
+{% block content %}
+{% endblock %}
 </body>
 </html>
