--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -5,6 +5,7 @@
 <script type="text/javascript"
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<a href="{% url "vacancy-list" %}">Main</a>
 <div class="container mt-5 d-flex justify-content-center">
 
     <div class="card p-3">
@@ -19,7 +20,7 @@
             <div class="ml-3 w-100">
 
                 <h4 class="mb-0 mt-0">{{ user.username }}</h4>
-                <span>Senior Journalist</span>
+                <span>{{ user.user_type }}</span>
 
                 <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats">
 
