--- a/resume/templates/resume/add_resume.html
+++ b/resume/templates/resume/add_resume.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
- <h1>Edit Vacancy</h1>
-    <form method="post" class="post-form">
+
+    <h1>Create Resume</h1>
+    <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn-default">Save</button>
     </form>
+
 {% endblock %}
