--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <li class="nav-item">
-    <a class="nav-link" href="{% url 'vacancy-list' %}">Main</a>
+    <a class="nav-link" href="{% url 'main-page' %}">Main</a>
 </li>
 {% if not user.is_authenticated %}
     <li class="nav-item">
@@ -23,8 +23,16 @@
         <li class="nav-item">
             <a class="nav-link" href="{% url 'create-vacancy' %}">Add vacancy</a>
         </li>
+    {% else %}
+        <li class="nav-item">
+            {% if user.resume_set.exists %}
+                <a class="nav-link" href="{% url 'edit-resume' user.resume_set.first.pk %}">Add resume</a>
+            {% else %}
+                <a class="nav-link" href="{% url 'create-resume' %}">Add resume</a>
+            {% endif %}
+        </li>
 
-        {% endif %}
+    {% endif %}
 
     <li>
         <form action="{% url 'logout' %}" method="post" class="form-inline">
