--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -5,7 +5,11 @@
 <script type="text/javascript"
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<a href="{% url "vacancy-list" %}">Main</a>
+
+<div class="mt-4 mb-4">
+    {% include 'header.html' %}
+</div>
+
 <div class="container mt-5 d-flex justify-content-center">
 
     <div class="card p-3">
@@ -22,41 +26,18 @@
                 <h4 class="mb-0 mt-0">{{ user.username }}</h4>
                 <span>{{ user.user_type }}</span>
 
-                <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats">
-
-                    <div class="d-flex flex-column">
-
-                        <span class="articles">Articles</span>
-                        <span class="number1">38</span>
-
-                    </div>
-
-                    <div class="d-flex flex-column">
-
-                        <span class="followers">Followers</span>
-                        <span class="number2">980</span>
-
-                    </div>
-
-
-                    <div class="d-flex flex-column">
-
-                        <span class="rating">Rating</span>
-                        <span class="number3">8.9</span>
-
-                    </div>
 
                 </div>
 
 
                 <div class="button mt-2 d-flex flex-row align-items-center">
 
-                    <button class="btn btn-sm btn-outline-primary w-100">Chat</button>
+
                     <form action="{% url 'logout' %}" method="post" class="form-inline">
                         {% csrf_token %}
                         <button type="submit" class="nav-link btn btn-link"
                                 style="display: inline; border: none; background: none; box-shadow: none;">
-                            LogOut
+                            Logout
                         </button>
 
 
@@ -71,3 +52,25 @@
     </div>
 
 </div>
+
+
+{% if user.user_type == 'company' %}
+    <h1>Vacncies</h1>
+    {% for vacancy in vacancies %}
+        <a href="{{ vacancy.get_absolute_url }}">
+            <h2><p>{{ vacancy.title }}</p></h2>
+        </a>
+    {% endfor %}
+    <h1>Feedback</h1>
+    {% for feedback in feedbacks %}
+        <h2><a href="{{ feedback.resume.get_absolute_url }}">{{ feedback.resume.profession }}</a></h2>
+    {% endfor %}
+
+{% else %}
+    <h1>My Resume</h1>
+    {% for resume in resumes %}
+        <a href="{{ resume.get_absolute_url }}">
+            <h1><p>{{ resume.profession }}</p></h1>
+        </a>
+    {% endfor %}
+{% endif %}
