--- a/vacancy/templates/vacancy/vacancy_list.html
+++ b/vacancy/templates/vacancy/vacancy_list.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <form method="get">
+        {{ form.as_p }}
+        <button type="submit">Filter</button>
+    </form>
+
     {% for vacancy in vacancy_list %}
         <a href="{{ vacancy.get_absolute_url }}">
             <h1><p>{{ vacancy.title }}</p></h1>
