--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -1,10 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h2>Register</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Register</button>
-  </form>
+  <h2>Registration Form</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+
+        {% if form.user_type.value == 'company' %}
+            <h3>Company Information</h3>
+            {{ company_form.as_p }}
+        {% elif form.user_type.value == 'job_seeker' %}
+            <h3>Job Seeker Information</h3>
+            {{ job_seeker_form.as_p }}
+        {% endif %}
+
+        <button type="submit">Register</button>
+    </form>
 {% endblock %}
